--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
+authors = ["Jorge Aparicio <jorge@japaric.io>"]
+categories = ["data-structures", "no-std"]
+description = "`static` friendly data structures that don't require dynamic memory allocation"
+documentation = "https://docs.rs/heapless"
+keywords = ["static", "no-heap"]
+license = "MIT OR Apache-2.0"
 name = "heapless"
+repository = "https://github.com/japaric/heapless"
 version = "0.1.0"
-authors = ["Jorge Aparicio <japaricious@gmail.com>"]
 
 [dependencies]
