--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ matrix:
       rust: nightly
 
     - env: TARGET=thumbv6m-none-eabi
-      rust: nightly
+      # work around rust-lang/rust#45802
+      rust: nightly-2017-11-01
       addons:
         apt:
           sources:
