--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ matrix:
       rust: nightly
 
     - env: TARGET=thumbv6m-none-eabi
-      # work around rust-lang/rust#45802
-      rust: nightly-2017-11-01
+      rust: nightly
       addons:
         apt:
           sources:
