--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ script:
 
 after_script: set +e
 
+after_success:
+  - bash ci/after_success.sh
+
 cache: cargo
 
 before_cache:
@@ -29,6 +32,7 @@ before_cache:
 
 branches:
   only:
+    - master
     - staging
     - trying
 
