--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ matrix:
 
     - env: TARGET=thumbv6m-none-eabi
       rust: nightly
+      if: branch != master
 
     - env: TARGET=thumbv7m-none-eabi
       rust: nightly
+      if: branch != master
 
 before_install: set -e
 
