--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ name = "heapless"
 repository = "https://github.com/japaric/heapless"
 version = "0.3.6"
 
+[features]
+const-fn = []
+
 [dev-dependencies]
 scoped_threadpool = "0.1.8"
 
