RingBuffer: put smaller atomic indices behind a Cargo feature
this let us drop the core_intrinsics feature gate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,9 @@ repository = "https://github.com/japaric/heapless"
 version = "0.3.6"
 
 [features]
-default = ["const-fn"]
+default = ["const-fn", "smaller-atomics"]
 const-fn = []
+smaller-atomics = []
 
 [dev-dependencies]
 scoped_threadpool = "0.1.8"
