--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ matrix:
       rust: beta
       if: branch != master
 
-    - env: TARGET=thumbv6m-none-eabi
-      rust: beta
-      if: branch != master
+    # wait for 1.29-beta
+    # - env: TARGET=thumbv6m-none-eabi
+    #   rust: beta
+    #   if: branch != master
 
     - env: TARGET=thumbv7m-none-eabi
       rust: beta
