--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: rust
 matrix:
   include:
     - env: TARGET=x86_64-unknown-linux-gnu
+      rust: stable
+      if: branch != master
+
+    - env: TARGET=x86_64-unknown-linux-gnu
       rust: beta
       if: branch != master
 
