--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,15 @@ language: rust
 matrix:
   include:
     - env: TARGET=x86_64-unknown-linux-gnu
+      rust: stable
+      if: branch != master
+
+    - env: TARGET=thumbv6m-none-eabi
       rust: beta
       if: branch != master
 
-    # wait for 1.29-beta
-    # - env: TARGET=thumbv6m-none-eabi
-    #   rust: beta
-    #   if: branch != master
-
     - env: TARGET=thumbv7m-none-eabi
-      rust: beta
+      rust: stable
       if: branch != master
 
     - env: TARGET=x86_64-unknown-linux-gnu
