--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,8 @@ scoped_threadpool = "0.1.8"
 [dependencies]
 generic-array = "0.11.0"
 hash32 = "0.1.0"
+
+[dependencies.serde]
+version = "1"
+optional = true
+default-features = false
