use core::mem::MaybeUninit; drop min-const-fn and smaller-atomics features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ categories = [
 ]
 description = "`static` friendly data structures that don't require dynamic memory allocation"
 documentation = "https://japaric.github.io/heapless/heapless/index.html"
+edition = "2018"
 keywords = [
     "static",
     "no-heap",
@@ -16,19 +17,17 @@ keywords = [
 license = "MIT OR Apache-2.0"
 name = "heapless"
 repository = "https://github.com/japaric/heapless"
-version = "0.4.4"
+version = "0.5.0-alpha.1"
 
 [features]
-const-fn = ["min-const-fn"]
-min-const-fn = []
-smaller-atomics = []
+const-fn = []
 
 [dev-dependencies]
 scoped_threadpool = "0.1.8"
 
 [dependencies]
 as-slice = "0.1.0"
-generic-array = "0.11.0"
+generic-array = "0.13.0"
 hash32 = "0.1.0"
 
 [dependencies.serde]
@@ -37,4 +36,4 @@ optional = true
 default-features = false
 
 [package.metadata.docs.rs]
-features = ["const-fn", "smaller-atomics"]
+features = ["const-fn"]
