--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ matrix:
     - env: TARGET=x86_64-unknown-linux-gnu
       rust: nightly
 
+    - env: TARGET=armv7r-none-eabi
+      rust: nightly
+      if: branch != master
+
     - env: TARGET=thumbv6m-none-eabi
       rust: nightly
       if: branch != master
