--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ keywords = [
 license = "MIT OR Apache-2.0"
 name = "heapless"
 repository = "https://github.com/japaric/heapless"
-version = "0.5.0-alpha.2"
+version = "0.5.0"
 
 [dev-dependencies]
 scoped_threadpool = "0.1.8"
