--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ name = "heapless"
 repository = "https://github.com/japaric/heapless"
 version = "0.5.1"
 
+[features]
+default = []
+no_cas = []
+
 [dev-dependencies]
 scoped_threadpool = "0.1.8"
 
