--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ repository = "https://github.com/japaric/heapless"
 version = "0.5.1"
 
 [features]
-default = []
-no_cas = []
+default = ["cas"]
+cas = []
 
 [dev-dependencies]
 scoped_threadpool = "0.1.8"
