--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,5 +48,6 @@ default-features = false
 version = "0.1"
 optional = true
 
-[dev-dependencies.serde_derive]
-version = "1"
+[dev-dependencies]
+serde_cbor = { version = "0.10", default-features = false }
+serde_derive = "1"
