--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ scoped_threadpool = "0.1.8"
 
 [dependencies]
 as-slice = "0.1.0"
-generic-array = "0.13.0"
+# generic-array = "0.13.0"
 hash32 = "0.1.0"
 
 [dependencies.serde]
