Sync Pool support for (32-bit) x86
the implementation uses a 64-bit atomic on `x86` to avoid the `ANCHOR` variable and the address
space limitation seen with the x86_64 compilation target

this PR also adds the i686-linux-musl target to the test matrix to exercise the new implementation

closes #231

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ __trybuild = []
 mpmc_large = []
 defmt-impl = ["defmt"]
 
-[target.x86_64-unknown-linux-gnu.dev-dependencies]
+[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dev-dependencies]
 scoped_threadpool = "0.1.8"
 
 [target.thumbv6m-none-eabi.dependencies]
@@ -58,4 +58,3 @@ optional = true
 [dev-dependencies.defmt]
 version = "0.2.1"
 features = ["unstable-test"]
-
