--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ atomic-polyfill = { version = "0.1.2", optional = true }
 [dependencies]
 hash32 = "0.2.1"
 
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+spin = "0.9.2"
+
 [dependencies.serde]
 version = "1"
 optional = true
