assume native compilation if target_os is not "none" to allow non-x86 hosts to run tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ mpmc_large = []
 # This flag has no version guarantee, the `defmt` dependency can be updated in a patch release
 defmt-impl = ["defmt"]
 
-[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dev-dependencies]
+[target.'cfg(not(target_os = "none"))'.dev-dependencies]
 scoped_threadpool = "0.1.8"
 
 [target.thumbv6m-none-eabi.dependencies]
