rely on packages that use us to patch crates.io for AVR

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,19 +31,19 @@ defmt-impl = ["defmt"]
 scoped_threadpool = "0.1.8"
 
 [target.thumbv6m-none-eabi.dependencies]
-atomic-polyfill = { git="https://github.com/mutantbob/atomic-polyfill.git", branch="main", optional = true }
+atomic-polyfill = { version = "0.1.2", optional = true }
 
 [target.riscv32i-unknown-none-elf.dependencies]
-atomic-polyfill = { git="https://github.com/mutantbob/atomic-polyfill.git", branch="main", optional = true }
+atomic-polyfill = { version = "0.1.4", optional = true }
 
 [target.riscv32imc-unknown-none-elf.dependencies]
-atomic-polyfill = { git="https://github.com/mutantbob/atomic-polyfill.git", branch="main", optional = true }
+atomic-polyfill = { version = "0.1.4", optional = true }
 
 [target.avr-atmega328p.dependencies]
-atomic-polyfill = { git="https://github.com/mutantbob/atomic-polyfill.git", branch="main", optional = true }
+atomic-polyfill = { version = "0.1.7", optional = true }
 
 [target.avr-atmega2560.dependencies]
-atomic-polyfill = { git="https://github.com/mutantbob/atomic-polyfill.git", branch="main", optional = true }
+atomic-polyfill = { version = "0.1.7", optional = true }
 
 
 [dependencies]
