--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ atomic-polyfill = { version = "0.1.2", optional = true }
 atomic-polyfill = { version = "0.1.4" }
 
 [target.riscv32imc-unknown-none-elf.dependencies]
-atomic-polyfill = { version = "0.1.4", optional = true }
+atomic-polyfill = { version = "0.1.4" }
 
 [dependencies]
 hash32 = "0.2.1"
