--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,9 @@
 name: Build
 on:
   pull_request:
+    branches: [main]
   push:
-    branches:
-      - master
-      - staging
-      - trying
+    branches: [main, staging, trying]
 
 env:
   CARGO_TERM_COLOR: always
@@ -14,7 +12,7 @@ jobs:
   # Run cargo fmt --check
   style:
     name: style
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -36,7 +34,7 @@ jobs:
   # Compilation check
   check:
     name: check
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         target:
@@ -98,7 +96,7 @@ jobs:
   # Run cpass tests
   testcpass:
     name: testcpass
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         target:
@@ -154,7 +152,7 @@ jobs:
   # Run test suite for UI
   testtsan:
     name: testtsan
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         target:
@@ -212,7 +210,7 @@ jobs:
   # Run cfail tests on MSRV
   testcfail:
     name: testcfail
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: cfail
@@ -255,7 +253,7 @@ jobs:
   # Run MIRI tests on nightly
   testmiri:
     name: testmiri
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -304,7 +302,7 @@ jobs:
       - testcpass
       - testtsan
       - testcfail
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Mark the job as a success
         run: exit 0
