don't test main after PRs are merged
this just duplicates the work of bors for no good reason

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches: [main]
   push:
-    branches: [main, staging, trying]
+    branches: [staging, trying]
 
 env:
   CARGO_TERM_COLOR: always
