--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ atomic-polyfill = { version = "1.0.1" }
 [target.riscv32imc-unknown-none-elf.dependencies]
 atomic-polyfill = { version = "1.0.1" }
 
+[target.xtensa-esp32s2-none-elf.dependencies]
+atomic-polyfill = { version = "1.0.1" }
+
 [target.'cfg(target_arch = "avr")'.dependencies]
 atomic-polyfill = { version = "1.0.1", optional = true }
 
