Use `portable-atomic` instead of `atomic-polyfill`.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
           - nightly
         features:
           - ""
-          - "cas"
+          - "cas,portable-atomic/critical-section"
           - "serde"
     steps:
       - name: Checkout
