Add `embedded_dma` feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,10 @@ serde = { version = "1", optional = true, default-features = false }
 ufmt-write = { version = "0.1", optional = true }
 defmt = { version = ">=0.2.0,<0.4", optional = true }
 
+[dependencies.embedded-dma]
+version = "0.2"
+optional = true
+
 # for the pool module
 [target.'cfg(any(target_arch = "arm", target_pointer_width = "32", target_pointer_width = "64"))'.dependencies]
 stable_deref_trait = { version = "1", default-features = false }
