enable github merge queue.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
     branches: [main]
   push:
     branches: [staging, trying]
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
@@ -337,8 +338,6 @@ jobs:
 
       - name: Run cargo
         run: cargo run
-
-
 
   # Refs: https://github.com/rust-lang/crater/blob/9ab6f9697c901c4a44025cf0a39b73ad5b37d198/.github/workflows/bors.yml#L125-L149
   #
