--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ ufmt-write = { version = "0.1", optional = true }
 defmt = { version = ">=0.2.0,<0.4", optional = true }
 
 [dev-dependencies]
-ufmt = { version = "0.1" }
+ufmt = "0.2"
 
 [package.metadata.docs.rs]
 all-features = true
