Simplify atomic availability detection.
- `cfg(target_has_atomic)` is stable now, use that.
- Hardcode in `build.rs` the list of targets with load/store but no CAS,
  since `cfg(target_has_atomic_load_store)` is not stable yet.
- Do not try to autodetect whether `portable-atomic` is needed or not,
  just let the user control it directly. If the user doesn't explicitly
  enable `portable-atomic` and native atomics are unavailable, the
  features requiring it will be missing.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,13 +80,6 @@ jobs:
           - thumbv7m-none-eabi
           - thumbv8m.base-none-eabi
           - thumbv8m.main-none-eabi
-        toolchain:
-          - stable
-          - nightly
-        features:
-          - ""
-          - "cas,portable-atomic/critical-section"
-          - "serde"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -113,14 +106,17 @@ jobs:
             ${{ runner.OS }}-build-${{ hashFiles('**/Cargo.lock') }}
             ${{ runner.OS }}-build-
 
-      - name: Install Rust ${{ matrix.toolchain }} with target (${{ matrix.target }})
+      - name: Install Rust with target (${{ matrix.target }})
         uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: ${{ matrix.toolchain }}
+          toolchain: stable
           targets: ${{ matrix.target }}
 
       - name: cargo check
-        run: cargo check --target=${{ matrix.target }} --no-default-features --features=${{ matrix.features }}
+        run: |
+          cargo check --target=${{ matrix.target }}
+          cargo check --target=${{ matrix.target }} --features="portable-atomic-critical-section"
+          cargo check --target=${{ matrix.target }} --features="ufmt serde defmt-03 mpmc_large"
 
   doc:
     name: doc
@@ -130,10 +126,6 @@ jobs:
         target:
           - x86_64-unknown-linux-gnu
           - thumbv7m-none-eabi
-        features:
-          - ""
-          - "cas"
-          - "serde"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -166,7 +158,7 @@ jobs:
           targets: ${{ matrix.target }}
 
       - name: cargo doc
-        run: cargo doc --target=${{ matrix.target }} --no-default-features --features=${{ matrix.features }}
+        run: cargo doc --target=${{ matrix.target }} --features="ufmt serde defmt-03 mpmc_large portable-atomic-critical-section"
 
   # Run cpass tests
   testcpass:
