--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,9 +43,12 @@ mpmc_large = []
 portable-atomic = { version = "1.0", optional = true }
 hash32 = "0.3.0"
 serde = { version = "1", optional = true, default-features = false }
-stable_deref_trait = { version = "1", default-features = false }
 ufmt-write = { version = "0.1", optional = true }
 defmt = { version = ">=0.2.0,<0.4", optional = true }
+
+# for the pool module
+[target.'cfg(any(target_arch = "arm", target_arch = "x86"))'.dependencies]
+stable_deref_trait = { version = "1", default-features = false }
 
 [dev-dependencies]
 ufmt = "0.2"
