--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,18 @@ jobs:
       - name: cargo fmt --check
         run: cargo fmt --all -- --check
 
+  clippy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy
+          targets: i686-unknown-linux-gnu
+      - run: cargo clippy --all --target i686-unknown-linux-gnu -- --deny warnings
+
   # Compilation check
   check:
     name: check
