--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["static", "no-heap"]
 license = "MIT OR Apache-2.0"
 name = "heapless"
 repository = "https://github.com/japaric/heapless"
-version = "0.7.16"
+version = "0.7.17"
 
 [features]
 default = ["cas"]
@@ -28,16 +28,19 @@ mpmc_large = []
 defmt-impl = ["defmt"]
 
 [target.thumbv6m-none-eabi.dependencies]
-atomic-polyfill = { version = "0.1.2", optional = true }
+atomic-polyfill = { version = "1", optional = true }
 
 [target.riscv32i-unknown-none-elf.dependencies]
-atomic-polyfill = { version = "0.1.4" }
+atomic-polyfill = { version = "1" }
 
 [target.riscv32imc-unknown-none-elf.dependencies]
-atomic-polyfill = { version = "0.1.4" }
+atomic-polyfill = { version = "1" }
+
+[target.xtensa-esp32s2-none-elf.dependencies]
+atomic-polyfill = { version = "1" }
 
 [target.'cfg(target_arch = "avr")'.dependencies]
-atomic-polyfill = { version = "0.1.8", optional = true }
+atomic-polyfill = { version = "1", optional = true }
 
 [dependencies]
 hash32 = "0.2.1"
