Move UI tests to `tests`.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -343,4 +343,4 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Run cargo
-        run: cargo run
+        run: cargo test --test ui
